--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "17.x"
-      - run: npm init playwright@latest
+      - uses: actions/setup-node@v1
 
-      - name: Test in Region - "${{ env.REGION }}"
-        run: npx playwright test
+      - uses: microsoft/playwright-github-action@v1
+      - name: Install dependencies and run tests
+        run: npm install && npm playwright test
