--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
 
       - uses: microsoft/playwright-github-action@v1
+      - name: Clear Cache
+        run: npm cache clean --force
       - name: Install dependencies and run tests
         run: npm install && npm playwright test
