--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           npm i
           npx playwright install
-          npx playwright test --headed
+          npx playwright test
